--- a/style.css
+++ b/style.css
@@ -1,11 +1,32 @@
 @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Montserrat:wght@600&family=Zen+Antique+Soft&display=swap');
+:root{
+    --primary-color : #565264;
+    --color: #f4f7f5;
+}
+
 body{
     text-align: center;
-    background-color: #f4f7f5;
-    color : #565264;
+    background-color: var(--color);
+    color : var(--primary-color);
     font-family: 'Montserrat', sans-serif;
 }
 label{
     display: block;
     padding: 1rem;
+}
+.footer{
+    background-color: var(--primary-color);
+    padding: 2rem 0rem;
+    color: var(--color);
+    border-top-right-radius: 1rem;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+.link{
+    text-decoration: none;
+    color: var(--color);
+    padding: 0rem 1rem;
 }
